--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                 </div>
                 
                 <div class="hamburger_display">
+                    <button class="close_button" onclick="closeHamburgerMenu()">×</button>                
+
                     <div class="logo">
                         <i class="material-icons">mood</i>
                     </div>
