vô tư và kiêu hãnh

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div id="search-results"></div>
             <div id="pagination"></div>
         </div>
-        <div id="home" class="product-tab" style="display:none;"> <!-- Nội dung cho TRANG CHỦ -->
+        <div id="home" class="product-tab" style="display:none;"> 
 
             <div class="home-container">
                 <div class="home">
