Vì tinh tú tên là Jack

--- a/cart.html
+++ b/cart.html
@@ -60,9 +60,9 @@
         </nav>
         <nav>
             <ul class="menu">
-                <li><a href="index.html" onclick = "home();">HOME</a></li>
+                <li><a href="index.html" onclick = "home();">TRANG CHỦ</a></li>
                 <li class="dropdown">
-                    <a href="#">PRODUCTS</a>
+                    <a href="#">SẢN PHẨM</a>
                     <ul class="dropdown-content">
                         <li><a href="index.html" onclick="product();">Whole Cake</a></li>
                         <li><a href="index.html" onclick="shortcake();">Short Cake </a></li>
@@ -72,8 +72,8 @@
                         <li><a href="index.html">Coffee and Beverages</a></li>
                     </ul>
                 </li>
-                <li><a href="#">ABOUT US</a></li>
-                <li><a href="#">DEALS</a></li>
+                <li><a href="#">TIN TỨC</a></li>
+                <li><a href="#">KHUYẾN MÃI</a></li>
         </nav>
     </header>
     
