sửa lại 1 số lỗi

--- a/cart.html
+++ b/cart.html
@@ -72,8 +72,8 @@
                         <li><a href="index.html">Coffee and Beverages</a></li>
                     </ul>
                 </li>
-                <li><a href="#">TIN TỨC</a></li>
-                <li><a href="#">KHUYẾN MÃI</a></li>
+                <li><a href="index.html">TIN TỨC</a></li>
+                <li><a href="index.html">KHUYẾN MÃI</a></li>
         </nav>
     </header>
     
