--- a/admin.html
+++ b/admin.html
@@ -455,9 +455,9 @@
     <script src="js/classes.js"></script>
     <script src="data/user.js"></script>
     <script src="js/dungchung.js"></script>
-    <script src="data/dataquanly.js"></script>
+    <!-- <script src="data/dataquanly.js"></script> -->
     <script src="js/admin.js"></script>
-    <script src="js/quanly.js"></script>
+    <!-- <script src="js/quanly.js"></script> -->
 </body>
 
 </html>
