--- a/cart.html
+++ b/cart.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/taikhoan.css">
     <link rel="stylesheet" href="css/index.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="js/cart.js" defer></script>
+    <script src="js/cart.js"></script>
     <script src="js/checkout.js"></script>
     <script src="js/dungchung.js"></script>
     <script src="js/classes.js"></script>
@@ -51,7 +51,7 @@
                         <a href="cart.html">
                             <i class="material-icons icon red">local_mall</i>
                         </a>
-                        <span class="cart-number"></span>
+                        <span class="cart-number">0</span>
                     </div>
                     <div class="enter">
                         <p>Giỏ hàng</p>
