--- a/nguoidung.html
+++ b/nguoidung.html
@@ -92,11 +92,20 @@
 
     <div class="container">
         <div class="sidebar">
+            <div class="icon-user">
+                <svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M24 0C10.752 0 0 10.752 0 24C0 37.248 10.752 48 24 48C37.248 48 48 37.248 48 24C48 10.752 37.248 0 24 0ZM24 9.6C28.632 9.6 32.4 13.368 32.4 18C32.4 22.632 28.632 26.4 24 26.4C19.368 26.4 15.6 22.632 15.6 18C15.6 13.368 19.368 9.6 24 9.6ZM24 43.2C19.128 43.2 13.368 41.232 9.264 36.288C13.4679 32.9897 18.6567 31.1971 24 31.1971C29.3433 31.1971 34.5321 32.9897 38.736 36.288C34.632 41.232 28.872 43.2 24 43.2Z" fill="#6D6E72"></path>
+                </svg>
+                <h3>Hiện tên user ở đây</h3>
+            </div>
             <div class="user-sidebar">
                 <h4><i class="fas fa-user"></i> Thông tin người dùng</h4>
             </div>
             <div class="order-sidebar">
                 <h4><i class="fas fa-box"></i> Đơn hàng của tôi</h4>
+            </div>
+            <div class="logout">
+                <i class="fas fa-sign-out-alt"><a onclick="if(window.confirm('Xác nhận đăng xuất ?')) logOut();">Đăng xuất</a></i>
             </div>
         </div>
         <div class="main-content">
@@ -154,5 +163,6 @@
 <script src="data/dataquanly.js"></script>
 <script src="data/dataproduct.js"></script>
 <script src="data/user.js"></script>
-
+<script src="js/timkiem.js"></script>
+<script src="js/filter.js"></script>
 </html>
