--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 <script src="data/dataquanly.js"></script>
 <script src="data/dataproduct.js"></script>
 <script src="data/user.js"></script>
-
-
+<script src="js/filter.js"></script>
+<script src="js/timkiem.js"></script>
 
 </html>
